# Whipper-GUI-Frontend---CD-Rip

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  PLANNING.md  README.md  TASKS.md  dev-setup.sh  install-appimage.sh  install.sh  pyproject.toml  setup-host.sh  uninstall.sh
.github/workflows/: appimage.yml  ci.yml  publish-pypi.yml  release.yml
docs/: README.md  appimage-testing.md  architecture.md  best-practices.md  eac-log-and-repair-feasibility.md  eac-parity-investigation.md  ecosystem-audit-2026-06.md  log-format-comparison.md  mp3-wav-support.md  offset-investigation-2026-06.md  release-testing.md  ripper-engine-strategy.md  session-log.md  test-plan.md  testing.md  upstream-modification-investigation.md  ux-design-principles.md
docs/archive/: README.md  archival-extraction-guide-2026-06.md
output_reference/: README.md
output_reference/EAC_mp3/: README.md  eac_mp3_police_classics.cue
output_reference/EAC_wav/: README.md
output_reference/cyanrip_flac/: README.md
output_reference/cyanrip_mp3/: README.md
output_reference/cyanrip_wav/: README.md
output_reference/whipper_flac/: README.md
output_reference/whipper_mp3/: README.md
output_reference/whipper_wav/: README.md
scripts/: ctdb_verify.py  eac_parity.py  preflight.py  rip_report.py  update_drive_offsets.py
src/platterpus/: __init__.py  app.py  app_icon.py  checksums.py  config.py  goal_presets.py  help_content.py  log_buffer.py  logging_setup.py  naming.py  read_speed_ladder.py  rip_report.py  verdict.py
src/platterpus/adapters/: ctdb_client.py  cyanrip_backend.py  rip_backend.py
src/platterpus/ctdb/: calibrate.py
src/platterpus/parsers/: cyanrip_log.py  rip_log.py
src/platterpus/ui/: help_dialogs.py  main_window.py  main_window_deps.py  main_window_helpers.py  main_window_rip.py  main_window_update.py  rip_controls.py  rip_progress.py  settings_dialog.py  track_table.py
src/platterpus/ui/dialogs/: auto_center.py  centering.py  pending_installs.py
src/platterpus/workers/: rip_worker.py
src/whipper_gui/: __init__.py  __main__.py  app.py  appimage_integration.py  config.py  drive_access.py  drive_control.py  help_content.py  offset_config.py  parity.py  paths.py  preflight.py  update_install.py
src/whipper_gui/adapters/: __init__.py  accuraterip_offsets.py  accuraterip_offsets_data.py  ctdb_client.py  cyanrip_backend.py  flac_recompress.py  metaflac.py  musicbrainz_client.py  transcode.py  whipper_backend.py
src/whipper_gui/ctdb/: decode.py  toc.py  verify.py
src/whipper_gui/parsers/: cd_info.py  drive_list.py  eac_log.py  rip_log.py
src/whipper_gui/ui/: disc_info_panel.py  drive_picker.py  drive_setup_dialog.py  help_dialogs.py  host_setup_dialog.py  main_window.py  main_window_deps.py  main_window_helpers.py  main_window_provision.py  main_window_rip.py  main_window_update.py  release_picker.py  rip_controls.py  rip_progress.py  settings_dialog.py  track_table.py  unknown_album.py
src/whipper_gui/ui/dialogs/: manual_install.py  pending_installs.py
src/whipper_gui/workers/: ctdb_worker.py  dependency_worker.py  mb_worker.py  rip_worker.py  update_worker.py
tests/: conftest.py  test_accuraterip_offsets.py  test_app.py  test_app_icon.py  test_appimage_integration.py  test_build_harness.py  test_checksums.py  test_config.py  test_ctdb_calibrate.py  test_ctdb_client.py  test_ctdb_decode.py  test_ctdb_verify.py  test_ctdb_worker.py  test_cyanrip_backend.py  test_dependency_worker.py  test_deps_checks.py  test_deps_host_setup.py  test_deps_host_teardown.py  test_deps_manager.py  test_deps_resolvers.py  test_deps_version.py  test_drive_access.py  test_drive_control.py  test_drive_setup_worker.py  test_flac_recompress.py  test_goal_presets.py  test_gui_thread_discipline.py  test_host_setup_worker.py  test_install_appimage_script.py  test_install_script.py  test_log_buffer.py  test_logging_setup.py  test_mb_worker.py  test_metaflac_adapter.py  test_musicbrainz_client.py  test_naming.py  test_offset_config.py  test_parity.py  test_parsers_cd_info.py  test_parsers_cyanrip_log.py  (+28 more)
tests/fixtures/: README.md
