[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whipper-gui"
# Version is single-sourced from `src/whipper_gui/__init__.py:__version__`
# (see [tool.setuptools.dynamic] below). Do NOT hard-code it here.
dynamic = ["version"]
description = "Linux GUI front-end for the whipper audio-CD ripping CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Whipper GUI contributors" }]
keywords = ["audio", "cd", "rip", "flac", "musicbrainz", "whipper", "qt"]
# License: GPL-3.0-only (KDD-10, decided 2026-05-30). Canonical text in
# ./LICENSE (auto-bundled into the wheel by setuptools). Signalled here
# via the OSI classifier only — the modern PEP 639 SPDX `license` string
# needs setuptools>=77 and clashes with the classifier on newer versions,
# so the classifier is the build-robust choice. Compatible with our deps:
# PySide6 is imported under its LGPL-3 option; whipper/ctdb-cli are
# invoked as subprocesses (no linking), so their GPL doesn't reach in.
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping",
]
dependencies = [
    "PySide6>=6.7,<7",
    "musicbrainzngs==0.7.1",
    "tomli-w>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.15,<1",
]

[project.scripts]
# Console-script entry — used by pipx install and the AppImage's AppRun.
whipper-gui = "whipper_gui.__main__:main"

[project.urls]
Repository = "https://github.com/rmccann-hub/Whipper-GUI-Frontend---CD-Rip"

[tool.setuptools.packages.find]
where = ["src"]

# Single source of truth for the version: the build reads __version__ from the
# package itself, so `pyproject.toml` never duplicates it. Everything else
# (the `--version` flag, the About dialog, the MusicBrainz user-agent) already
# imports `whipper_gui.__version__`, and installed-package metadata
# (`importlib.metadata.version`) is generated from this at build time.
[tool.setuptools.dynamic]
version = { attr = "whipper_gui.__version__" }

# Ruff is the project linter + formatter (added 2026-06-04). `ruff check`
# lints, `ruff format` formats; CI runs both in --check/no-fix mode. Defaults
# (88-col, double quotes) match the existing code, so adoption was low-churn.
[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
# E/W=pycodestyle, F=pyflakes, I=isort (import order), B=flake8-bugbear
# (likely-bug patterns), UP=pyupgrade (modern 3.11+ syntax).
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    # Long lines are largely comments/strings; the formatter wraps code and
    # we don't want it splitting prose or URLs. Keep E501 off.
    "E501",
]

[tool.ruff.lint.flake8-bugbear]
# Qt's model/view override signatures legitimately default index args to a
# fresh QModelIndex() (the documented PySide idiom); treat it as immutable so
# B008 doesn't flag every rowCount/columnCount/data/parent override.
extend-immutable-calls = ["PySide6.QtCore.QModelIndex"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
# `-q` keeps the output readable while the suite is small.
# `--strict-markers` rejects typo'd `@pytest.mark.foo` decorators.
addopts = "-q --strict-markers"
